single and featured template
completed single and featured templates to use for team and products

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<header id="header" class="container">
 
 						<!-- Logo -->
-							<div id="logo">
-								<h1><a href="index.html">Strike-A-Lott</a></h1>
+							<div>
+								<a href="index.html" class="image"><img src="images/strike-a-lott-logo.jpg"
+									alt="Strike-A-Lott Logo" style="width:25%;"/></a>
 							</div>
 
 						<!-- Nav -->
@@ -34,8 +35,8 @@
 								<li>
 									<a href="#">Locations</a>
 									<ul>
-										<li><a href="#">Highland Lanes</a></li>
-										<li><a href="#">Westgate Lanes</a></li>
+										<li><a href="#">Strike-A-Lott North</a></li>
+										<li><a href="#">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
@@ -71,10 +72,8 @@
 				<div id="banner-wrapper">
 					<div id="banner" class="box container">
 						<div class="row">
-							<div class="7u 12u(medium)">
-								<h2>Strike-A-Lott Pro Shop</h2>
-								<p>Strike-A-Lott Pro Shop</p>
-							</div>
+              <img src="images/pic-proshop-longer.jpg" alt="Main proshop picture"
+							 style="width:100%;"/>
 						<!--	<div class="5u 12u(medium)">
 								<ul>
 									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
@@ -94,7 +93,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic-proshop-full.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Our Team</h2>
@@ -124,10 +123,10 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/pic-proshop-full.JPG" alt="" /></a>
 										<div class="inner">
 											<header>
-												<h2>About Us</h2>
+												<h2>Pricing</h2>
 												<p>Here's another intriguing subtitle</p>
 											</header>
 											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
@@ -139,120 +138,85 @@
 					</div>
 				</div>
 
-			<!-- Main -->
-				<div id="main-wrapper">
-					<div class="container">
-						<div class="row 200%">
-							<div class="4u 12u(medium)">
-
-								<!-- Sidebar -->
-									<div id="sidebar">
-										<section class="widget thumbnails">
-											<h3>Interesting stuff</h3>
-											<div class="grid">
-												<div class="row 50%">
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-													<div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
-												</div>
-											</div>
-											<a href="#" class="button icon fa-file-text-o">More</a>
-										</section>
-									</div>
-
-							</div>
-							<div class="8u 12u(medium) important(medium)">
+<!-- Main No Side Bar-->
+				<!-- Main -->
+					<div id="main-wrapper">
+						<div class="container">
+							<div id="content">
 
 								<!-- Content -->
-									<div id="content">
-										<section class="last">
-											<h2>So what's this all about?</h2>
-											<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
-											Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-											<a href="#" class="button icon fa-arrow-circle-right">Continue Reading</a>
-										</section>
-									</div>
+									<article>
+
+										<h2>About Us</h2>
+
+										<p>Strke-A-Lott is a Bowling Pro Shop that is owned and operated by
+										<a href="#">Gary Robinson</a> and Professional Bowler <a href="#">Wes
+										Malott</a>. Gary and Wes are in the Pro Shop business because of their
+										love for the sport of Bowling and they will to extend their 20+ year
+										experience and knowlegde from the industry to others. </p>
+
+										<p>Strike-A-Lott has two locations to service all your bowling
+										needs in the Austin area. <a href="#">Strike-A-Lott North</a> is located inside Highland Lanes and
+										<a href="#">Strike-A-Lott South</a> is located inside Westgate Lanes. At our locations you
+										will also find the LARGEST inventory in Central Texas! </p>
+
+										<p>Strike-A-Lott strives to give you the best customer service possible.
+										This includes going out on the lanes and watching the customer bowl to receive
+										all the information needed to match up to the customer with the best bowling
+										ball to get the best angles and the most strikes. </p>
+
+									</article>
 
 							</div>
 						</div>
 					</div>
-				</div>
+<!-- End Main No Side Bar-->
 
+
+<!-- Beginning Footer Follow us and addresses-->
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
+
+						<!-- Contact -->
 							<div class="3u 6u(medium) 12u$(small)">
-
-								<!-- Links -->
-									<section class="widget links">
-										<h3>Random Stuff</h3>
-										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
-										</ul>
-									</section>
-
+								<section class="widget contact last">
+								<h3>Follow Us</h3>
+								<ul>
+									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								</ul>
+							</section>
 							</div>
-							<div class="3u 6u$(medium) 12u$(small)">
 
-								<!-- Links -->
-									<section class="widget links">
-										<h3>Random Stuff</h3>
-										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
-										</ul>
-									</section>
-
-							</div>
 							<div class="3u 6u(medium) 12u$(small)">
-
-								<!-- Links -->
-									<section class="widget links">
-										<h3>Random Stuff</h3>
-										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
-										</ul>
-									</section>
-
+								<section class="widget contact last">
+									<h3>Strike-A-Lott North</h3>
+									<h4>Inside Highland Lanes</h4>
+									<p>8909 Burnet Rd.<br />
+									Austin, TX. 78757<br />
+									(512) 458-1215</p>
+								</section>
 							</div>
-							<div class="3u 6u$(medium) 12u$(small)">
 
-								<!-- Contact -->
-									<section class="widget contact last">
-										<h3>Contact Us</h3>
-										<ul>
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
-									</section>
-
+							<div class="3u 6u(medium) 12u$(small)">
+								<section class="widget contact last">
+									<h3>Strike-A-Lott South</h3>
+									<h4>Inside Westgate Lanes</h4>
+									<p>2701 West William Cannon Dr.<br />
+									Austin, TX. 78745<br />
+									(512) 441-2695</p>
+								</section>
 							</div>
+
 						</div>
 						<div class="row">
 							<div class="12u">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; Strike-A-Lott Pro Shop. All rights reserved</li><li><a href="http://html5up.net">HTML5 UP</a> Verti. Design by <a href="http://www.anggieramirez.com">Anggie Ramirez Perea</a></li>
+										<li>&copy; 2016 Strike-A-Lott Pro Shop. All rights reserved</li><li><a href="http://html5up.net">HTML5 UP</a> Verti. Design by <a href="http://www.anggieramirez.com">Anggie Ramirez Perea</a></li>
 									</ul>
 								</div>
 							</div>
@@ -261,6 +225,7 @@
 				</div>
 
 			</div>
+	<!-- End Footer-->
 
 		<!-- Scripts -->
 
