--- a/template-page.html
+++ b/template-page.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strike-A-Lott</title>
+		<title>Strike-A-Lott Template Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,10 +21,10 @@
 					<header id="header" class="container">
 
 						<!-- Logo -->
-							<div>
-								<a href="index.html" class="image"><img src="images/strike-a-lott.jpg"
-									alt="Strike-A-Lott Logo"/></a>
-							</div>
+						<div>
+							<a href="index.html" class="image"><img src="images/strike-a-lott-logo.jpg"
+								alt="Strike-A-Lott Logo" style="width:25%;"/></a>
+						</div>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -32,12 +32,11 @@
 								<!--
 									<li class="current"><a href="index.html">Welcome</a></li>
 								-->
-								<li><a href="no-sidebar.html">About Us</a></li>
 								<li>
 									<a href="#">Locations</a>
 									<ul>
-										<li><a href="#">Highland Lanes</a></li>
-										<li><a href="#">Westgate Lanes</a></li>
+										<li><a href="#">Strike-A-Lott North</a></li>
+										<li><a href="#">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
@@ -70,11 +69,11 @@
 				</div>
 
 			<!-- Banner -->
-				<div id="banner-wrapper">
-					<div id="banner" class="box container">
-						<div class="row">
-              <img src="images/pic-proshop-long.JPG" alt="Main proshop picture"
-							 style="width:100%;"/>
+			<div id="banner-wrapper">
+				<div id="banner" class="box container">
+					<div class="row">
+						<img src="images/pic-proshop-longer.jpg" alt="Main proshop picture"
+						 style="width:100%;"/>
 						<!--	<div class="5u 12u(medium)">
 								<ul>
 									<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
@@ -191,12 +190,12 @@
 										<section class="widget thumbnails">
 											<h3>Interesting stuff</h3>
 											<div class="grid">
-												<div class="row 50%">
+
 													<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
 													<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
 													<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
 													<div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
-												</div>
+
 											</div>
 											<a href="#" class="button icon fa-file-text-o">More</a>
 										</section>
