--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<!-- Logo -->
 							<div>
 								<a href="index.html" class="image"><img src="images/strike-a-lott-logo.jpg"
-									alt="Strike-A-Lott Logo" style="width:25%;"/></a>
+									alt="Strike-A-Lott Logo" style="width:25%;padding:0px"/></a>
 							</div>
 
 						<!-- Nav -->
@@ -35,8 +35,8 @@
 								<li>
 									<a href="#">Locations</a>
 									<ul>
-										<li><a href="#">Strike-A-Lott North</a></li>
-										<li><a href="#">Strike-A-Lott South</a></li>
+										<li><a href="location-north.html">Strike-A-Lott North</a></li>
+										<li><a href="location-south.html">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
@@ -44,7 +44,7 @@
 										<ul>
 											<li><a href="#">Wes Malott</a></li>
 											<li><a href="#">Gary Robinson</a></li>
-											<li><a href="#">Rob Law</a></li>
+											<li><a href="#">Robert Lawrence</a></li>
 											<li><a href="#">Jeff Bruzenak</a></li>
 										</ul>
 									</li>
@@ -54,6 +54,8 @@
 											<li><a href="#">Balls</a></li>
 											<li><a href="#">Bags</a></li>
 											<li><a href="#">Shoes</a></li>
+											<li><a href="#">Accesories</a></li>
+											<li><a href="#">Apparel</a></li>
 										</ul>
 									</li>
 									<li><a href="no-sidebar.html">Pricing</a></li>
@@ -142,7 +144,7 @@
 				<!-- Main -->
 					<div id="main-wrapper">
 						<div class="container">
-							<div id="content">
+							<div id="content" style="text-align:justify">
 
 								<!-- Content -->
 									<article>
