--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 									<li>
 										<a href="#">Our Team</a>
 										<ul>
-											<li><a href="#">Wes Malott</a></li>
-											<li><a href="#">Gary Robinson</a></li>
-											<li><a href="#">Robert Lawrence</a></li>
-											<li><a href="#">Jeff Bruzenak</a></li>
+											<li><a href="team-wes.html">Wes Malott</a></li>
+											<li><a href="team-gary.html">Gary Robinson</a></li>
+											<li><a href="team-jeff.html">Jeff Bruzenak</a></li>
+											<li><a href="team-rob.html">Robert Lawrence</a></li>
 										</ul>
 									</li>
 									<li>
