--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</ul>
 									</li>
 									<li>
-										<a href="#">Products</a>
+										<a href="products.html">Products</a>
 										<ul>
 											<li><a href="#">Balls</a></li>
 											<li><a href="#">Bags</a></li>
@@ -58,8 +58,8 @@
 											<li><a href="#">Apparel</a></li>
 										</ul>
 									</li>
-									<li><a href="no-sidebar.html">Pricing</a></li>
-									<li><a href="no-sidebar.html">Contact Us</a></li>
+									<li><a href="pricing.html">Pricing</a></li>
+									<li><a href="contact.html">Contact Us</a></li>
 					<!--				<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
