products balls and home
added a products ball page with link to the companies websites and
included home on the top navigation

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-								<!--
-									<li class="current"><a href="index.html">Welcome</a></li>
-								-->
+									<li class="current"><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Locations</a>
 									<ul>
@@ -51,7 +49,7 @@
 									<li>
 										<a href="products.html">Products</a>
 										<ul>
-											<li><a href="#">Balls</a></li>
+											<li><a href="products-balls.html">Balls</a></li>
 											<li><a href="#">Bags</a></li>
 											<li><a href="#">Shoes</a></li>
 											<li><a href="#">Accesories</a></li>
@@ -152,14 +150,14 @@
 										<h2>About Us</h2>
 
 										<p>Strke-A-Lott is a Bowling Pro Shop that is owned and operated by
-										<a href="#">Gary Robinson</a> and Professional Bowler <a href="#">Wes
+										<a href="team-gary.html">Gary Robinson</a> and Professional Bowler <a href="team-wes.html">Wes
 										Malott</a>. Gary and Wes are in the Pro Shop business because of their
 										love for the sport of Bowling and they will to extend their 20+ year
 										experience and knowlegde from the industry to others. </p>
 
 										<p>Strike-A-Lott has two locations to service all your bowling
-										needs in the Austin area. <a href="#">Strike-A-Lott North</a> is located inside Highland Lanes and
-										<a href="#">Strike-A-Lott South</a> is located inside Westgate Lanes. At our locations you
+										needs in the Austin area. <a href="location-north.html">Strike-A-Lott North</a> is located inside Highland Lanes and
+										<a href="location-south.html">Strike-A-Lott South</a> is located inside Westgate Lanes. At our locations you
 										will also find the LARGEST inventory in Central Texas! </p>
 
 										<p>Strike-A-Lott strives to give you the best customer service possible.
