--- a/products-balls.html
+++ b/products-balls.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strike-A-Lott Template Location</title>
+		<title>Strike-A-Lott Bowling Balls</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,10 +46,10 @@
 											<li><a href="team-rob.html">Robert Lawrence</a></li>
 										</ul>
 									</li>
-									<li>
+									<li class="current">
 										<a href="products.html">Products</a>
 										<ul>
-											<li><a href="#">Balls</a></li>
+											<li><a href="products-balls.html">Balls</a></li>
 											<li><a href="#">Bags</a></li>
 											<li><a href="#">Shoes</a></li>
 											<li><a href="#">Accesories</a></li>
@@ -69,47 +69,119 @@
 											<div id="content" align="center">
 												<!-- Content -->
 												<header style="text-align:center;">
-												<h2>Strike-A-Lott North/South<h2>
+												<h2>Bowling Balls<h2>
 												</header>
 												<div class="image"><img src="images/pic-wes.JPG" alt="" style="width:40%;"/></div>
-												<h3>Inside ... Lanes </h3>
-												<p>Address here<br />Austin, TX. 00000<br />(000) 000-0000</p>
-												<h3>Hours of Operation</h3>
-												<div align="center" style="text-align:center;width:30%;">
-												<table>
-													<tr>
-														<td>Monday</td>
-														<td>11:30am - 6:00pm</td>
-													</tr>
-													<tr>
-														<td>Tuesday</td>
-														<td>11:30am - 7:00pm</td>
-													</tr>
-													<tr>
-														<td>Wednesday</td>
-														<td>11:30am - 7:00pm</td>
-													</tr>
-													<tr>
-														<td>Thursday</td>
-														<td>11:30am - 7:00pm</td>
-													</tr>
-													<tr>
-														<td>Friday</td>
-														<td>11:30am - 6:30pm</td>
-													</tr>
-													<tr>
-														<td>Saturday</td>
-														<td>10:00am - 3:30pm</td>
-													</tr>
-													<tr>
-														<td>Sunday</td>
-														<td>Closed</td>
-													</tr>
-												</table>
+												<p>Description</p>
 											</div>
-												<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3442.2602129005677!2d-97.72781698580549!3d30.37196808176429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644cb968d09db39%3A0x30e38c574eee4e2e!2sHighland+Lanes!5e0!3m2!1sen!2sus!4v1476645672307" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-											</div>
+<!-- Table-->
+									<table style="padding:40px;">
+										<tr>
+											<td>
+												<div align="center">
+													<a href="http://www.stormbowling.com/balls-1" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Storm</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.rotogrip.com" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Roto Grip</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.900global.com/newglobalshop/?page_id=6253" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>900 Global</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.motivbowling.com" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Motiv</h3>
+													</div>
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<div align="center">
+													<a href="http://www.ebonite.com/products/balls" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Ebonite</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.columbia300.com/products/balls" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Columbia 300</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.hammerbowling.com/products/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Hammer</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://www.trackbowling.com/products/balls" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Track</h3>
+													</div>
+												</div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<div align="center">
+													<a href="http://www.bowlwithbrunswick.com/balls/all/" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Brunswick</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://dv8bowling.com/balls/" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>DV8</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="http://radicalbowling.com/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>Radical</h3>
+													</div>
+												</div>
+											</td>
+							<!--				<td>
+												<div align="center">
+													<a href="" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<div class="inner" align="center">
+															<h3>&nbsp;</h3>
+													</div>
+												</div>
+											</td> -->
+										</tr>
+									</table>
+<!--End Table-->
+
 									</div>
 <!-- End Main No Side Bar-->
 
