--- a/products.html
+++ b/products.html
@@ -29,9 +29,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-								<!--
-									<li class="current"><a href="index.html">Welcome</a></li>
-								-->
+									<li><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Locations</a>
 									<ul>
@@ -51,7 +49,7 @@
 									<li class="current">
 										<a href="products.html">Products</a>
 										<ul>
-											<li><a href="#">Balls</a></li>
+											<li><a href="products-balls.html">Balls</a></li>
 											<li><a href="#">Bags</a></li>
 											<li><a href="#">Shoes</a></li>
 											<li><a href="#">Accesories</a></li>
@@ -81,7 +79,7 @@
 										<tr>
 											<td>
 												<div align="center">
-													<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="products-balls.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
 													<div class="inner" align="center">
 															<h3>Balls</h3>
 													</div>
