--- a/team-wes.html
+++ b/team-wes.html
@@ -29,9 +29,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-								<!--
-									<li class="current"><a href="index.html">Welcome</a></li>
-								-->
+									<li><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Locations</a>
 									<ul>
