--- a/template-page.html
+++ b/template-page.html
@@ -29,35 +29,35 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-								<!--
-									<li class="current"><a href="index.html">Welcome</a></li>
-								-->
+									<li><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Locations</a>
 									<ul>
-										<li><a href="#">Strike-A-Lott North</a></li>
-										<li><a href="#">Strike-A-Lott South</a></li>
+										<li><a href="location-north.html">Strike-A-Lott North</a></li>
+										<li><a href="location-south.html">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
 										<a href="#">Our Team</a>
 										<ul>
-											<li><a href="#">Wes Malott</a></li>
-											<li><a href="#">Gary Robinson</a></li>
-											<li><a href="#">Rob Law</a></li>
-											<li><a href="#">Jeff Bruzenak</a></li>
+											<li><a href="team-wes.html">Wes Malott</a></li>
+											<li><a href="team-gary.html">Gary Robinson</a></li>
+											<li><a href="team-jeff.html">Jeff Bruzenak</a></li>
+											<li><a href="team-rob.html">Robert Lawrence</a></li>
 										</ul>
 									</li>
 									<li>
-										<a href="#">Products</a>
+										<a href="products.html">Products</a>
 										<ul>
 											<li><a href="#">Balls</a></li>
 											<li><a href="#">Bags</a></li>
 											<li><a href="#">Shoes</a></li>
+											<li><a href="#">Accesories</a></li>
+											<li><a href="#">Apparel</a></li>
 										</ul>
 									</li>
-									<li><a href="no-sidebar.html">Pricing</a></li>
-									<li><a href="no-sidebar.html">Contact Us</a></li>
+									<li><a href="pricing.html">Pricing</a></li>
+									<li><a href="contact.html">Contact Us</a></li>
 					<!--				<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
