--- a/products-apparel.html
+++ b/products-apparel.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strike-A-Lott Bowling Balls</title>
+		<title>Strike-A-Lott Bowling Apparel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -70,7 +70,7 @@
 											<div id="content" align="center">
 												<!-- Content -->
 												<header style="text-align:center;">
-												<h2>Bowling Balls<h2>
+												<h2>Bowling Apparel<h2>
 												</header>
 												<div class="image"><img src="images/pic-wes.JPG" alt="" style="width:40%;"/></div>
 												<p>Description</p>
