--- a/team-wes.html
+++ b/team-wes.html
@@ -27,37 +27,40 @@
 						</div>
 
 						<!-- Nav -->
-							<nav id="nav">
+						<nav id="nav">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="locations.html">Locations</a>
 								<ul>
-									<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Locations</a>
+									<li><a href="location-north.html">Strike-A-Lott North</a></li>
+									<li><a href="location-south.html">Strike-A-Lott South</a></li>
+								</ul>
+							</li>
+								<li class="current">
+									<a href="our-team.html">Our Team</a>
 									<ul>
-										<li><a href="location-north.html">Strike-A-Lott North</a></li>
-										<li><a href="location-south.html">Strike-A-Lott South</a></li>
+										<li><a href="team-wes.html">Wes Malott</a></li>
+										<li><a href="team-gary.html">Gary Robinson</a></li>
+										<li><a href="team-jeff.html">Jeff Bruzenak</a></li>
+										<li><a href="team-rob.html">Robert Lawrence</a></li>
 									</ul>
 								</li>
-									<li class="current">
-										<a href="#">Our Team</a>
-										<ul>
-											<li><a href="team-wes.html">Wes Malott</a></li>
-											<li><a href="team-gary.html">Gary Robinson</a></li>
-											<li><a href="team-jeff.html">Jeff Bruzenak</a></li>
-											<li><a href="team-rob.html">Robert Lawrence</a></li>
-										</ul>
-									</li>
-									<li>
-										<a href="products.html">Products</a>
-										<ul>
-											<li><a href="#">Balls</a></li>
-											<li><a href="#">Bags</a></li>
-											<li><a href="#">Shoes</a></li>
-											<li><a href="#">Accesories</a></li>
-											<li><a href="#">Apparel</a></li>
-										</ul>
-									</li>
-									<li><a href="pricing.html">Pricing</a></li>
-									<li><a href="contact.html">Contact Us</a></li>
+								<li>
+									<a href="products.html">Products</a>
+									<ul>
+										<li><a href="products-balls.html">Balls</a></li>
+										<li><a href="products-bags.html">Bags</a></li>
+										<li><a href="products-shoes.html">Shoes</a></li>
+										<li><a href="products-accesories.html">Accesories</a></li>
+										<li><a href="products-apparel.html">Apparel</a></li>
+									</ul>
+								</li>
+								<li><a href="pricing.html">Pricing</a></li>
+								<li><a href="photos.html">Photos</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
+							</ul>
+						</nav>
 								</ul>
 							</nav>
 
@@ -111,11 +114,13 @@
 													</div>
 												</div>
 											</td>
+										</tr>
+										<tr>
 											<td>
 												<div align="center">
 													<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>High5</h3>
+														<h3>High5</h3>
 													</div>
 												</div>
 											</td>
@@ -123,7 +128,15 @@
 												<div align="center">
 													<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>Innovative</h3>
+														<h3>Innovative</h3>
+													</div>
+												</div>
+											</td>
+											<td>
+												<div align="center">
+													<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<div class="inner" align="center">
+														<h3>PBA</h3>
 													</div>
 												</div>
 											</td>
