--- a/our-team.html
+++ b/our-team.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strike-A-Lott Bowling Balls</title>
+		<title>Strike-A-Lott Our Team</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,7 +37,7 @@
 										<li><a href="location-south.html">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
-									<li>
+									<li class="current">
 										<a href="our-team.html">Our Team</a>
 										<ul>
 											<li><a href="team-wes.html">Wes Malott</a></li>
@@ -46,7 +46,7 @@
 											<li><a href="team-rob.html">Robert Lawrence</a></li>
 										</ul>
 									</li>
-									<li class="current">
+									<li>
 										<a href="products.html">Products</a>
 										<ul>
 											<li><a href="products-balls.html">Balls</a></li>
@@ -70,9 +70,8 @@
 											<div id="content" align="center">
 												<!-- Content -->
 												<header style="text-align:center;">
-												<h2>Bowling Balls<h2>
+												<h2>Our Team<h2>
 												</header>
-												<div class="image"><img src="images/pic-wes.JPG" alt="" style="width:40%;"/></div>
 												<p>Description</p>
 											</div>
 
@@ -81,104 +80,36 @@
 										<tr>
 											<td>
 												<div align="center">
-													<a href="http://www.stormbowling.com/balls-1" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="team-wes.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>Storm</h3>
+															<h3>Wes Malott</h3>
 													</div>
 												</div>
 											</td>
 											<td>
 												<div align="center">
-													<a href="http://www.rotogrip.com" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
+													<a href="team-gary.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>Roto Grip</h3>
+															<h3>Gary Robinson</h3>
 													</div>
 												</div>
 											</td>
 											<td>
 												<div align="center">
-													<a href="http://www.900global.com/newglobalshop/?page_id=6253" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
+													<a href="team-jeff.html" class="image"><img src="images/pic06.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>900 Global</h3>
+															<h3>Jeff Bruzenak</h3>
 													</div>
 												</div>
 											</td>
 											<td>
 												<div align="center">
-													<a href="http://www.motivbowling.com" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
+													<a href="team-rob.html" class="image"><img src="images/pic07.jpg" alt="" /></a>
 													<div class="inner" align="center">
-															<h3>Motiv</h3>
+															<h3>Rob Lawrence</h3>
 													</div>
 												</div>
 											</td>
-										</tr>
-										<tr>
-											<td>
-												<div align="center">
-													<a href="http://www.ebonite.com/products/balls" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Ebonite</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.columbia300.com/products/balls" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Columbia 300</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.hammerbowling.com/products/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Hammer</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.trackbowling.com/products/balls" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Track</h3>
-													</div>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div align="center">
-													<a href="http://www.bowlwithbrunswick.com/balls/all/" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Brunswick</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://dv8bowling.com/balls/" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>DV8</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://radicalbowling.com/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Radical</h3>
-													</div>
-												</div>
-											</td>
-							<!--				<td>
-												<div align="center">
-													<a href="" class="image"><img src="images/pic07.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>&nbsp;</h3>
-													</div>
-												</div>
-											</td> -->
 										</tr>
 									</table>
 <!--End Table-->
