--- a/photos.html
+++ b/photos.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strike-A-Lott Bowling Balls</title>
+		<title>Strike-A-Lott Template Featured</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,7 +46,7 @@
 											<li><a href="team-rob.html">Robert Lawrence</a></li>
 										</ul>
 									</li>
-									<li class="current">
+									<li>
 										<a href="products.html">Products</a>
 										<ul>
 											<li><a href="products-balls.html">Balls</a></li>
@@ -57,8 +57,12 @@
 										</ul>
 									</li>
 									<li><a href="pricing.html">Pricing</a></li>
-									<li><a href="photos.html">Photos</a></li>
+									<li class="current"><a href="photos.html">Photos</a></li>
 									<li><a href="contact.html">Contact Us</a></li>
+					<!--				<li><a href="left-sidebar.html">Left Sidebar</a></li>
+									<li><a href="right-sidebar.html">Right Sidebar</a></li>
+									<li><a href="no-sidebar.html">No Sidebar</a></li>
+					-->
 								</ul>
 							</nav>
 
@@ -67,122 +71,117 @@
 <!-- Main No Side Bar-->
 								<!-- Main -->
 									<div id="main-wrapper">
-											<div id="content" align="center">
+										<div class="container">
+											<div id="content">
+
 												<!-- Content -->
-												<header style="text-align:center;">
-												<h2>Bowling Balls<h2>
-												</header>
-												<div class="image"><img src="images/pic-wes.JPG" alt="" style="width:40%;"/></div>
-												<p>Description</p>
+													<article style="text-align: center;">
+
+														<h2>Photos</h2>
+
+														<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+														Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+														Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+														consequat etiam lorem ipsum dolor sit amet nullam.</p>
+
+													</article>
+<!-- Row of Featured Boxes 1-->
+													<div class="row">
+	<!--Featured Box 1-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 1</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 1-->
+	<!--Featured Box 2-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 2</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 2-->
+	<!--Featured Box 3-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 3</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 3-->
+
+													</div>
+<!--End Featured Boxes Row 1-->
+
+<!-- Row of Featured Boxes 2-->
+													<div class="row">
+	<!--Featured Box 4-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 4</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 4-->
+	<!--Featured Box 5-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 5</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 5-->
+	<!--Featured Box 6-->
+														<div class="4u 12u(medium)">
+																<section class="box feature">
+																	<a href="#" class="image featured"><img src="images/pic-wes.JPG" alt="" /></a>
+																	<div class="inner">
+																		<header>
+																			<h2>Feature 6</h2>
+																			<p>Subtitle</p>
+																		</header>
+																		<p>Description</p>
+																	</div>
+																</section>
+														</div>
+	<!--End Featured Box 6-->
+
+													</div>
+<!--End Featured Boxes Row 2-->
 											</div>
-
-<!-- Table-->
-									<table style="padding:40px;">
-										<tr>
-											<td>
-												<div align="center">
-													<a href="http://www.stormbowling.com/balls-1" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Storm</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.rotogrip.com" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Roto Grip</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.900global.com/newglobalshop/?page_id=6253" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>900 Global</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.motivbowling.com" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Motiv</h3>
-													</div>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div align="center">
-													<a href="http://www.ebonite.com/products/balls" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Ebonite</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.columbia300.com/products/balls" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Columbia 300</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.hammerbowling.com/products/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Hammer</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://www.trackbowling.com/products/balls" target="_blank" class="image"><img src="images/pic07.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Track</h3>
-													</div>
-												</div>
-											</td>
-										</tr>
-										<tr>
-											<td>
-												<div align="center">
-													<a href="http://www.bowlwithbrunswick.com/balls/all/" target="_blank" class="image"><img src="images/pic04.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Brunswick</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://dv8bowling.com/balls/" target="_blank" class="image"><img src="images/pic05.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>DV8</h3>
-													</div>
-												</div>
-											</td>
-											<td>
-												<div align="center">
-													<a href="http://radicalbowling.com/balls" target="_blank" class="image"><img src="images/pic06.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>Radical</h3>
-													</div>
-												</div>
-											</td>
-							<!--				<td>
-												<div align="center">
-													<a href="" class="image"><img src="images/pic07.jpg" alt="" /></a>
-													<div class="inner" align="center">
-															<h3>&nbsp;</h3>
-													</div>
-												</div>
-											</td> -->
-										</tr>
-									</table>
-<!--End Table-->
-
+										</div>
 									</div>
 <!-- End Main No Side Bar-->
 
