--- a/pricing.html
+++ b/pricing.html
@@ -31,14 +31,14 @@
 								<ul>
 									<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Locations</a>
+									<a href="locations.html">Locations</a>
 									<ul>
 										<li><a href="location-north.html">Strike-A-Lott North</a></li>
 										<li><a href="location-south.html">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
-										<a href="#">Our Team</a>
+										<a href="our-team.html">Our Team</a>
 										<ul>
 											<li><a href="team-wes.html">Wes Malott</a></li>
 											<li><a href="team-gary.html">Gary Robinson</a></li>
@@ -49,14 +49,15 @@
 									<li>
 										<a href="products.html">Products</a>
 										<ul>
-											<li><a href="#">Balls</a></li>
-											<li><a href="#">Bags</a></li>
-											<li><a href="#">Shoes</a></li>
-											<li><a href="#">Accesories</a></li>
-											<li><a href="#">Apparel</a></li>
+											<li><a href="products-balls.html">Balls</a></li>
+											<li><a href="products-bags.html">Bags</a></li>
+											<li><a href="products-shoes.html">Shoes</a></li>
+											<li><a href="products-accesories.html">Accesories</a></li>
+											<li><a href="products-apparel.html">Apparel</a></li>
 										</ul>
 									</li>
 									<li class="current"><a href="pricing.html">Pricing</a></li>
+									<li><a href="photos.html">Photos</a></li>
 									<li><a href="contact.html">Contact Us</a></li>
 								</ul>
 							</nav>
@@ -101,13 +102,8 @@
 										</tr>
 										<tr>
 											<td width="10%;">&nbsp;</td>
-											<td>Plug ALL (Includes Resurface)</td>
-											<td>$60</td>
-										</tr>
-										<tr>
-											<td width="10%;">&nbsp;</td>
-											<td>Plug Fingers or Thumb Only</td>
-											<td>$25</td>
+											<td>Pitch Plug Fingers</td>
+											<td>$12</td>
 										</tr>
 										<tr>
 											<td width="10%;">&nbsp;</td>
@@ -116,8 +112,13 @@
 										</tr>
 										<tr>
 											<td width="10%;">&nbsp;</td>
-											<td>Pitch Plug Fingers</td>
-											<td>$12</td>
+											<td>Plug Fingers or Thumb Only</td>
+											<td>$25</td>
+										</tr>
+										<tr>
+											<td width="10%;">&nbsp;</td>
+											<td>Plug ALL (Includes Resurface)</td>
+											<td>$60</td>
 										</tr>
 									<tr>
 										<td colspan="2"><b>Ball Maintenance</b></td>
