--- a/products.html
+++ b/products.html
@@ -31,14 +31,14 @@
 								<ul>
 									<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Locations</a>
+									<a href="locations.html">Locations</a>
 									<ul>
 										<li><a href="location-north.html">Strike-A-Lott North</a></li>
 										<li><a href="location-south.html">Strike-A-Lott South</a></li>
 									</ul>
 								</li>
 									<li>
-										<a href="#">Our Team</a>
+										<a href="our-team.html">Our Team</a>
 										<ul>
 											<li><a href="team-wes.html">Wes Malott</a></li>
 											<li><a href="team-gary.html">Gary Robinson</a></li>
@@ -50,13 +50,14 @@
 										<a href="products.html">Products</a>
 										<ul>
 											<li><a href="products-balls.html">Balls</a></li>
-											<li><a href="#">Bags</a></li>
-											<li><a href="#">Shoes</a></li>
-											<li><a href="#">Accesories</a></li>
-											<li><a href="#">Apparel</a></li>
+											<li><a href="products-bags.html">Bags</a></li>
+											<li><a href="products-shoes.html">Shoes</a></li>
+											<li><a href="products-accesories.html">Accesories</a></li>
+											<li><a href="products-apparel.html">Apparel</a></li>
 										</ul>
 									</li>
 									<li><a href="pricing.html">Pricing</a></li>
+									<li><a href="photos.html">Photos</a></li>
 									<li><a href="contact.html">Contact Us</a></li>
 								</ul>
 							</nav>
