--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 						<!-- Logo -->
 							<div>
-								<a href="index.html" class="image"><img src="images/strike-a-lott-logo.jpg"
-									alt="Strike-A-Lott Logo" style="width:25%;padding:0px"/></a>
+								<a href="index.html" class="image"><img src="images/strike-a-lott-logoX.png"
+									alt="Strike-A-Lott Logo" style="width:20%;padding:0px"/></a>
 							</div>
 
 						<!-- Nav -->
